Fix button deletion event overlapping with event to see details

--- a/src/pages/button/button.scss
+++ b/src/pages/button/button.scss
@@ -1,3 +1,7 @@
 page-button {
 
 }
+
+.add {
+    margin-bottom: 15px;
+}
