--- a/src/pages/service-detail/service-detail.scss
+++ b/src/pages/service-detail/service-detail.scss
@@ -1,3 +1,8 @@
 page-service-detail {
 
 }
+
+
+.add {
+    margin-bottom: 15px;
+}
